[gd_scene load_steps=11 format=3 uid="uid://ds4coag1bsp26"]

[ext_resource type="Script" path="res://Scenes/Game/game.gd" id="1_5kbt4"]
[ext_resource type="PackedScene" uid="uid://ya5vwbofgc5o" path="res://Scenes/FruitRunTime/fruitruntime.tscn" id="2_k7ybf"]
[ext_resource type="PackedScene" uid="uid://di5w83rqkb1rg" path="res://Scenes/Terrain/terrain.tscn" id="3_yhfdt"]
[ext_resource type="PackedScene" uid="uid://bstyw22qrrhvn" path="res://Scenes/Player/player.tscn" id="4_3ocqy"]
[ext_resource type="PackedScene" uid="uid://5toamlrmvfgp" path="res://Scenes/GameOver/game_over.tscn" id="5_1wg0q"]
[ext_resource type="AudioStream" uid="uid://y23yc6f2nq68" path="res://Assets/Music/The Monkey Island Band Plays Again.mp3" id="5_3jhdy"]
[ext_resource type="AudioStream" uid="uid://bkl1jn06y0jq6" path="res://Assets/Sounds/sfx_sounds_interaction6.wav" id="6_uy0tn"]
[ext_resource type="AudioStream" uid="uid://dw6m0es75koo" path="res://Assets/Sounds/sfx_sounds_interaction16.wav" id="7_d3lon"]

[sub_resource type="GDScript" id="GDScript_dviui"]
script/source = "extends Label



	
"

[sub_resource type="Theme" id="Theme_3b56k"]

[node name="Game" type="Node2D"]
script = ExtResource("1_5kbt4")
fruitruntime_scene = ExtResource("2_k7ybf")

[node name="Terrain" parent="." instance=ExtResource("3_yhfdt")]
position = Vector2(1, 0)

[node name="Player" parent="." instance=ExtResource("4_3ocqy")]
position = Vector2(224, 464)

[node name="FruitHolder" type="Node2D" parent="."]

[node name="FruitTimer" type="Timer" parent="."]
wait_time = 1.552
autostart = true

[node name="SpawnL" type="Marker2D" parent="."]
position = Vector2(64, -64)

[node name="SpawnR" type="Marker2D" parent="."]
position = Vector2(1016, -64)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_right = 151.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0.572549, 0.964706, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0.243137, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score: 0"
script = SubResource("GDScript_dviui")
metadata/_edit_use_anchors_ = true

[node name="HealthLabel" type="Label" parent="UI"]
offset_top = 56.0
offset_right = 99.0
offset_bottom = 111.0
theme = SubResource("Theme_3b56k")
theme_override_colors/font_color = Color(0.909804, 0.054902, 0.188235, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.172549, 1, 0.54902)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "HP: 0"

[node name="GameOver" parent="UI" instance=ExtResource("5_1wg0q")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1016, -64)
stream = ExtResource("5_3jhdy")
autoplay = true
parameters/looping = true

[node name="BananaGrabbedSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1016, -64)
stream = ExtResource("6_uy0tn")

[node name="BananaLostSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1016, -64)
stream = ExtResource("7_d3lon")
volume_db = 1.0

[connection signal="timeout" from="FruitTimer" to="." method="_on_fruit_timer_timeout"]
